# sj-gemini-vertex-ai

./: .gitignore  README.md  pyproject.toml
sjgeminifvai/: __init__.py
sjgeminifvai/jclass/: __init__.py  blokthreshold.py  contentbuilder.py  fvai.py  gcbuilder.py  gcr.py  gmf.py  harmcategory.py  optionals.py  safetysettings.py
