[tool.poetry]
name = "sj-gemeni-vertex-ai"
version = "0.1.0"
description = "Access Gemini Android SDK in Python"
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyjnius = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
